src/sphinxdocrs/tests/snapshots/otherdocs__otherdocs__src_jinja2_docs__html_rust_tree.snap
---
source: src/sphinxdocrs/tests/otherdocs.rs
expression: rs_tree.clone()
---
- ".buildinfo"
- _images
- _images/jinja-name.svg
- _sources
- _sources/api.rst.txt
- _sources/changes.rst.txt
- _sources/extensions.rst.txt
- _sources/faq.rst.txt
- _sources/index.rst.txt
- _sources/integration.rst.txt
- _sources/intro.rst.txt
- _sources/license.rst.txt
- _sources/nativetypes.rst.txt
- _sources/sandbox.rst.txt
- _sources/switching.rst.txt
- _sources/templates.rst.txt
- _sources/tricks.rst.txt
- _static
- _static/atkinson
- _static/atkinson/AtkinsonHyperlegibleMonoVF-Variable.woff2
- _static/atkinson/AtkinsonHyperlegibleNextVF-Variable.woff2
- _static/atkinson/LICENSE.txt
- _static/base-stemmer.js
- _static/basic.css
- _static/describe_version.js
- _static/doctools.js
- _static/documentation_options.js
- _static/english-stemmer.js
- _static/file.png
- _static/jinja-icon.svg
- _static/jinja-logo.svg
- _static/jinja-name.svg
- _static/jinja.css
- _static/language_data.js
- _static/minus.png
- _static/plus.png
- _static/pocoo.css
- _static/pygments.css
- _static/searchtools.js
- _static/sphinx_highlight.js
- _static/webmcp.js
- api.html
- changes.html
- extensions.html
- faq.html
- genindex.html
- index.html
- integration.html
- intro.html
- license.html
- nativetypes.html
- objects.inv
- py-modindex.html
- sandbox.html
- search.html
- searchindex.js
- switching.html
- templates.html
- tricks.html
- webmcp.json
